# zgame-with-cpp-and-sdl2

./: CMakeLists.txt  Doxyfile  README.md
include/: AIcomponent.h  Animation.h  AssetManager.h  ColliderComponent.h  Components.h  ECS.h  EntityBuilder.h  Game.hpp  HealthComponent.h  KeyBoardController.h  MainWrapper.h  Map.h  ProjectileComponent.h  Sprite.h  TextureManager.h  TileComponent.h  TransformComponent.h  Vector2D.h
resources/: map.map
src/: AssetManager.cpp  EntityBuilder.cpp  Game.cpp  MainWrapper.cpp  Map.cpp  Vector2D.cpp  main.cpp
tests/: AIcomponent_test.cpp  ColliderComponent_tests.cpp  HealthComponent_test.cpp  KeyBoardController_tests.cpp  ProjectileComponent_tests.cpp  SpriteComponent_tests.cpp  TileComponent_tests.cpp  TransformComponent_test.cpp  main.cpp
